dat_namespace/nginx-ingress/hello-kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-rs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kube
  template:
    metadata:
      labels:
        app: hello-kube
    spec:
      containers:
        - image: 080196/hello-kube
        - image: harbor.demo.bigdata.com/demo/hello-kube
          name: hello-kube
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: harbor-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello-kube
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
